live-link added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Nature's Nest</title>
+
+    <style>
+      .navbar-text {
+        color: #047e29;
+        font-size: 24px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <h1 class="navbar-text">Nature's Nest</h1>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
